# soccer-transfers

./: .gitignore  README.md  degrees.csv  in_degrees.csv  pyproject.toml
SQL/: SoccerDB.sql
data/: degrees1997.csv  degrees2019.csv  sample.csv  transfers.csv
data/league_data/: all_leagues.txt  league_test.txt  leagues_africa.txt  leagues_america.txt  leagues_asia.txt  leagues_europa.txt
scrap/: main.py  missingclubs.py  scrap_clubs.py  scrap_leagues.py
scrap/domain/: Clubs.py  Transfer.py
src/: binary_directed.py  community.py  degree.py  graph.py
src/utils/connector/: mysql_conn.py
src/utils/sql/: queries.py
